{
    "name": "Player",
    "maps": [
        {
            "name": "Player",
            "id": "8834d437-c0d0-4363-b936-82cdcb7e74bc",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "1114eb84-072d-4813-9820-886fe392114b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeEnemy1",
                    "type": "Button",
                    "id": "84f3f365-7824-4eed-877b-a45e237de5ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeEnemy2",
                    "type": "Button",
                    "id": "b9844f32-1250-411b-b84b-b1dc8788848e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeEnemyAll",
                    "type": "Button",
                    "id": "3bb60211-5644-449a-9893-f140f8062728",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Walk",
                    "id": "51fe5619-734b-42fe-8b31-017f29461cda",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "40a45a6b-1a40-4746-869f-21e2d5280a2d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9f760f03-7cc4-423d-b010-d654eb61537e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ef5a0185-7fb2-4fcc-9b2d-959766b9dd70",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "223a6e98-ed70-48d4-9d3f-e5b565c331f8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "efd171c0-fd1e-4b06-9abb-f4b264c1889e",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeEnemy1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b66603f-0d4c-48ba-923a-73599fe652fd",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeEnemy2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f779386-0fa1-4964-be2e-259662aab6e6",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeEnemyAll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}